syntax = "proto3";

option go_package = "github.com/benoctopus/tasker/libs/proto";

import "util.proto";

service TaskService {
	rpc GetTask (GetTaskRequest) returns (Task) {}
	rpc CreateTask (CreateTaskRequest) returns (Task) {}
	rpc DeleteTask (GetTaskRequest) returns (Empty) {}
	rpc ListTasks (Empty) returns (ListTasksResponse) {}
	rpc UpdateTask (UpdateTaskRequest) returns (Task) {}
}


message GetTaskRequest {
	string id = 1;
}

message CreateTaskRequest {
	string title = 2;
	string owner_id = 3;
}

message UpdateTaskRequest {
	string id = 1;
	optional string title = 2;
}

message ListTasksResponse {
	repeated Task tasks = 1;
}

message Task {
	string id = 1;
	string owner_id = 2;
	string title = 3;
	string created_at = 4;
	string updated_at = 5;
}